[gd_scene load_steps=32 format=3 uid="uid://cv0c84qhjc2i"]

[ext_resource type="PackedScene" uid="uid://uhmn6jvb8pf2" path="res://src/unit/character/enemy/enemy.tscn" id="1_rjm5c"]
[ext_resource type="Script" uid="uid://2khlbhbo2msh" path="res://src/unit/character/enemy/ice_pop/ice_pop.gd" id="2_yqygu"]
[ext_resource type="Shader" uid="uid://d003qi8qm71iu" path="res://src/asset/shader/hurt_flash.gdshader" id="3_xgu88"]
[ext_resource type="Texture2D" uid="uid://d0fee7loo7vfm" path="res://asset/texture/unit/enemy/ice_pop/idle.webp" id="3_ykflr"]
[ext_resource type="Texture2D" uid="uid://bd5twsvwhexer" path="res://asset/texture/unit/enemy/ice_pop/walk.webp" id="4_f6q47"]
[ext_resource type="Script" uid="uid://cjlyed3rdu8i8" path="res://src/unit/common/behavior_tree/sequence.gd" id="4_ojw0h"]
[ext_resource type="Texture2D" uid="uid://t2o82hrr0dcj" path="res://asset/texture/unit/enemy/ice_pop/attack.webp" id="5_unsux"]
[ext_resource type="Script" uid="uid://dsd2h2jexq7ig" path="res://src/unit/character/enemy/behavior/is_alive.gd" id="5_yqygu"]
[ext_resource type="Texture2D" uid="uid://btdwmnrdu1vwq" path="res://asset/texture/unit/enemy/ice_pop/hurt.webp" id="6_5jdyd"]
[ext_resource type="Script" uid="uid://be7bgphyblv17" path="res://src/unit/character/enemy/behavior/is_knockback.gd" id="6_rpgrb"]
[ext_resource type="Script" uid="uid://b5skciich7bs3" path="res://src/unit/common/behavior_tree/inverter.gd" id="7_711kg"]
[ext_resource type="Script" uid="uid://cp6fi8qibdmcj" path="res://src/unit/character/enemy/behavior/is_falling.gd" id="8_w75dn"]
[ext_resource type="Script" uid="uid://dndwb24t0am6q" path="res://src/unit/character/enemy/behavior/turn_by_checker.gd" id="9_1kycl"]
[ext_resource type="Script" uid="uid://j1g8lbwu4scg" path="res://src/unit/character/enemy/behavior/ground_move.gd" id="10_836yj"]
[ext_resource type="Script" uid="uid://hjo2hvko5sdk" path="res://src/unit/common/behavior_tree/selector.gd" id="12_711kg"]
[ext_resource type="Script" uid="uid://b6avlkr4abq5o" path="res://src/unit/character/enemy/ice_pop/behavior/is_can_attack.gd" id="13_711kg"]
[ext_resource type="Script" uid="uid://dlfubv7fe53h2" path="res://src/unit/character/enemy/behavior/idle.gd" id="14_1kycl"]
[ext_resource type="Script" uid="uid://cfgiis6pfterb" path="res://src/unit/character/enemy/behavior/turn_by_player_location.gd" id="14_w75dn"]
[ext_resource type="Script" uid="uid://dbn0d0l1k1vaj" path="res://src/unit/character/enemy/behavior/wait_animation.gd" id="16_836yj"]
[ext_resource type="Script" uid="uid://bgftxambgagaq" path="res://src/unit/character/enemy/ice_pop/behavior/attack.gd" id="17_37gea"]
[ext_resource type="Script" uid="uid://bkikt1rhlnjj6" path="res://src/unit/common/behavior_tree/waiter.gd" id="18_xgu88"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5815q"]
resource_local_to_scene = true
shader = ExtResource("3_xgu88")
shader_parameter/flash_amount = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lq1ce"]
size = Vector2(6, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_es5yy"]
size = Vector2(8, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5jdyd"]
size = Vector2(8, 16)

[sub_resource type="Animation" id="Animation_f6q47"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ykflr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5jdyd"]
resource_name = "attack"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_unsux")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_lq1ce"]
resource_name = "hurt"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_5jdyd")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ykflr"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ykflr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_unsux"]
resource_name = "walk"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_f6q47")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_unsux"]
_data = {
&"RESET": SubResource("Animation_f6q47"),
&"attack": SubResource("Animation_5jdyd"),
&"hurt": SubResource("Animation_lq1ce"),
&"idle": SubResource("Animation_ykflr"),
&"walk": SubResource("Animation_unsux")
}

[node name="IcePop" instance=ExtResource("1_rjm5c")]
script = ExtResource("2_yqygu")
enemy_name = &"ice_pop"

[node name="Status" parent="." index="0"]
max_health = 10

[node name="Sprite2D" parent="Graphics" index="0"]
material = SubResource("ShaderMaterial_5815q")
position = Vector2(0, -8)
texture = ExtResource("3_ykflr")

[node name="CollisionShape2D" parent="Graphics/Hitbox" index="0"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_lq1ce")

[node name="CollisionShape2D" parent="Graphics/Hurtbox" index="0"]
visible = true
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_es5yy")

[node name="WallChecker" type="RayCast2D" parent="Graphics" index="3"]
position = Vector2(0, -1)
target_position = Vector2(6, 0)
collision_mask = 513

[node name="GroundChecker" type="RayCast2D" parent="Graphics" index="4"]
position = Vector2(5, -1)
target_position = Vector2(0, 2)
collision_mask = 3

[node name="FrontPlayerChecker" type="RayCast2D" parent="Graphics" index="5"]
position = Vector2(0, -7)
target_position = Vector2(320, 0)
collision_mask = 5

[node name="BackPlayerChecker" type="RayCast2D" parent="Graphics" index="6"]
position = Vector2(0, -7)
target_position = Vector2(-64, 0)
collision_mask = 5

[node name="TopPlayerChecker" type="RayCast2D" parent="Graphics" index="7"]
position = Vector2(3, -8)
target_position = Vector2(125, -125)
collision_mask = 5

[node name="ShootPoint" type="Marker2D" parent="Graphics" index="8"]
position = Vector2(3, -8)

[node name="CollisionShape2D" parent="." index="3"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_5jdyd")

[node name="AttackCooldownTimer" type="Timer" parent="Timers" index="1"]
wait_time = 1.5
one_shot = true

[node name="Sequence" type="Node" parent="BehaviorTree" index="0"]
script = ExtResource("4_ojw0h")

[node name="IsAlive" type="Node" parent="BehaviorTree/Sequence" index="0"]
script = ExtResource("5_yqygu")

[node name="IsKnockback" type="Node" parent="BehaviorTree/Sequence" index="1"]
script = ExtResource("6_rpgrb")

[node name="Inverter" type="Node" parent="BehaviorTree/Sequence" index="2"]
script = ExtResource("7_711kg")

[node name="IsFalling" type="Node" parent="BehaviorTree/Sequence/Inverter" index="0"]
script = ExtResource("8_w75dn")

[node name="TurnByChecker" type="Node" parent="BehaviorTree/Sequence" index="3" node_paths=PackedStringArray("checkers")]
script = ExtResource("9_1kycl")
checkers = [NodePath("../../../Graphics/WallChecker"), NodePath("../../../Graphics/GroundChecker")]
checkers_logic = Array[bool]([true, false])

[node name="GroundMove" type="Node" parent="BehaviorTree/Sequence" index="4"]
script = ExtResource("10_836yj")
speed = 60.0

[node name="Selector" type="Node" parent="BehaviorTree/Sequence" index="5"]
script = ExtResource("12_711kg")
metadata/_custom_type_script = "uid://hjo2hvko5sdk"

[node name="Inverter" type="Node" parent="BehaviorTree/Sequence/Selector" index="0"]
script = ExtResource("7_711kg")
metadata/_custom_type_script = "uid://b5skciich7bs3"

[node name="IsCanAttack" type="Node" parent="BehaviorTree/Sequence/Selector/Inverter" index="0"]
script = ExtResource("13_711kg")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="Sequence" type="Node" parent="BehaviorTree/Sequence/Selector" index="1"]
script = ExtResource("4_ojw0h")
metadata/_custom_type_script = "uid://cjlyed3rdu8i8"

[node name="Idle" type="Node" parent="BehaviorTree/Sequence/Selector/Sequence" index="0"]
script = ExtResource("14_1kycl")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="TurnToPlayer" type="Node" parent="BehaviorTree/Sequence/Selector/Sequence" index="1"]
script = ExtResource("14_w75dn")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="AttackAnimation" type="Node" parent="BehaviorTree/Sequence/Selector/Sequence" index="2"]
script = ExtResource("16_836yj")
animation_name = &"attack"
wait_offset = -0.1
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="Attack" type="Node" parent="BehaviorTree/Sequence/Selector/Sequence" index="3"]
script = ExtResource("17_37gea")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="Waiter" type="Node" parent="BehaviorTree/Sequence/Selector/Sequence" index="4"]
script = ExtResource("18_xgu88")
time = 0.1
metadata/_custom_type_script = "uid://bkikt1rhlnjj6"

[node name="TurnInvertPlayer" type="Node" parent="BehaviorTree/Sequence/Selector/Sequence" index="5"]
script = ExtResource("14_w75dn")
invert = true
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="HealthBar" parent="." index="7"]
offset_top = -18.0
offset_bottom = -17.0

[node name="AnimationPlayer" parent="." index="8"]
libraries = {
&"": SubResource("AnimationLibrary_unsux")
}
